--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
           <div class="sidebar-item"><span class="material-icons">library_music</span></div>
         </aside>
         
-       
+        <footer class="bottom-bar">
+            <div class="track-info">
+              <div class="track-title">Animal I Have Become</div>
+              <div class="track-artist">Three Days Grace</div>
+            </div>
+            <div class="controls">
+              <div class="progress-container">
+                <span class="time current-time">0:25</span>
+                <div class="progress-bar">
+                  <div class="progress" style="width:20%"></div>
+                </div>
+                <span class="time total-time">4:35</span>
+              </div>
+            </div>
+          </footer>
+        </div>
+  
+
+
+
 </body>
 </html>
