--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
           <div class="sidebar-item"><span class="material-icons">library_music</span></div>
         </aside>
         
+        <main class="main-content">
+            <!--Contenuto principale della pagina  -->
+          </main>
+
+        <div class="top-bar">
+            <button class="upgrade-btn">Effettua l'upgrade</button>
+          </div>
+        
         <footer class="bottom-bar">
             <div class="track-info">
               <div class="track-title">Animal I Have Become</div>
